--- a/package.json
+++ b/package.json
@@ -17,18 +17,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.6",
-    "@vueuse/core": "^10.9.0",
-    "axios": "^1.5.0",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^6.0.0",
-    "jquery": "^3.7.1",
-    "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "vue3-carousel": "^0.3.3"
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.30",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.57.0",
